# virtual-backround-leak-segmentation

./: .gitignore  02_exploration_torch.ipynb  04_imageSeg.ipynb  06_mode_chenannigans.ipynb  07_deblurring.ipynb  08_autolabel.ipynb  09_vids_to_img.ipynb  10_new_sim_mask.ipynb  12_going_with_temporal_flow.ipynb  HOW_TO_USE.md  README.md  data_dir.txt  exp01_TEST.py  exp01_test_new_module.py  exp02TEST.py  exp02_new_filters.py  exp03_TEST.py  exp03_create_modes.py  exp03_mode_image.py  exp04_unet.py  image_Seg.py  image_Seg_TEST.py  pyproject.toml  reconstruct_bg.py  reconstruct_bg2.py  reconstruct_bg3.py  reconstruct_bg4.py  recover_bg.py  setup_script.sh  solution.py  solution_1.py  solution_2_verbose.py  solution_exp2.py  solution_exp3.py  sync_server.sh  test_solution.ipynb  util.py
lightning_logs/version_24/: hparams.yaml  metrics.csv
lightning_logs/version_24/checkpoints/: best-epoch=1-val_loss=0.163.ckpt  best-epoch=2-val_loss=0.162-v1.ckpt  best-epoch=2-val_loss=0.162.ckpt
setup/: .gitignore  requirements.txt
src/: data_loader.py  helpers.py  leak_model.py  losses.py  masks.py  util.py  video_dataset.py
truesight/: dataset.py  features.py  masks.py  models.py  util.py
